design #79 - responsive on ios fixed

--- a/styles/fragments/_section-video-hopr.scss
+++ b/styles/fragments/_section-video-hopr.scss
@@ -129,4 +129,22 @@
     }
   }
 
+  @media screen and (max-width: 500px) {
+    .video-text-animated {
+      bottom: 62px;
+      position: relative;
+    }
+
+
+    .aux-container {
+      .bottom-image {
+        a {
+          img {
+            width: 90px !important;
+            height: 110px !important;
+          }
+        }
+      }
+    }
+  }
 }
